# hpotools

./: LICENSE  README.md  setup.cfg
.github/workflows/: python-app.yml
examples/: gene_test.txt  hptest.obo  phenotype_test.hpoa  test.snpeff.vcf
hpotools/: __init__.py  __main__.py  cmd.py  import_hpo.py  model.py  settings.py  terms.py
tests/: test_cmd.py  test_import_obo.py
