[metadata]
name = hpotools 
version = attr: hpotools.__version__
description = A tool to query Human Phenotype Ontology terms
long_description = file: README.md
long_description_content_type = text/markdown
author = Sacha Schutz
author_email = sacha@labsquare.org
url = https://github.com/dridk/hpotools
license = GPL
keywords = GUI, health
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = hpotools
install_requires =
	scipy>=1.6.0
	pandas>=1.2.0
	pyvcf>=0.6.8
    networkx>=4.4.2


[options.entry_points]
console_scripts =
    hpotools = hpotools:main

[zest.releaser]
create-wheel = yes
python-file-with-version = hpotools/__init__.py

[aliases]
test=pytest
